--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
+  color: #FFE8D6;
 }
 
 h1, h2, h3 {
@@ -47,12 +48,19 @@ header h1 {
   margin-top: 10px;
 }
 
-.form-container button {
+button {
   border: none;
   border-radius: 5px;
   background: #6B705C;
   color: #FFF5ED;
   padding: .5em;
+  margin: 10px;
+}
+
+button:hover,
+button:active {
+  background: #FFF5ED;
+  color: #6B705C;
 }
 
 .songs-overview {
@@ -63,13 +71,23 @@ header h1 {
 }
 
 .song-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: black solid;
   width: 300px;
-  text-align: center;
   margin: 10px auto;
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 15px 5px #6B705C;
   box-shadow: 5px 5px 15px 5px #6B705C;
+  background: #CB997E;
 }
 
 .song-container h3 {
