--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: $font-base;
+  color: $base-color-300;
 }
 
 h1, h2, h3 {
@@ -44,14 +45,22 @@ header {
   margin-top:  10px;
 }
 
-.form-container button {
+button {
   border: none;
   border-radius: 5px;
   background: $base-color-900;
   color: $base-color-100;
   padding: .5em;
-
+  margin: 10px;
 }
+
+button:hover,
+button:active {
+ background: $base-color-100;
+ color: $base-color-900;
+}
+
+
 
 .songs-overview {
   display: grid;
@@ -63,13 +72,16 @@ header {
 }
 
 .song-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: black solid;
   width: 300px;
-  text-align: center;
   margin: 10px auto;
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 15px 5px $base-color-900; 
   box-shadow: 5px 5px 15px 5px $base-color-900;
+  background: $base-color-500 ;
 
 
 
@@ -91,4 +103,8 @@ img {
   width: 100px;
   height: 100px;
   object-fit: cover;
+}
+
+.delete-button {
+
 }
