--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
 @import 'variable';
+@import "mixin";
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -8,6 +9,7 @@ body {
   margin: 0;
   font-family: $font-base;
   color: $base-color-300;
+  background: $base-color-300;
 }
 
 h1, h2, h3 {
@@ -25,7 +27,65 @@ header {
   }
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+  background: $base-color-700;
+  
+  ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
 
+  li {
+    list-style: none;
+  }
+
+  a {
+    color: $base-color-1100;
+
+    &:hover {
+      color: $base-color-300;
+    }
+  }
+}
+
+.App {
+  max-width: 1200px;
+  margin: 0 auto;
+  background: $base-color-700;
+}
+
+.form-section {
+  background: $base-color-500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @include for-tablet {
+    flex-direction: row;
+  }
+
+& > div{
+  align-self: center;
+}
+}
+
+.sort-form {
+  display: flex;
+
+  & select{
+    height: fit-content;
+    padding: 5px;
+    margin: auto;
+  }
+
+  @include for-tablet {
+    flex-direction: column;
+    order: 1;
+  }
+}
 
 .form-container {
   background: $base-color-500;
@@ -36,7 +96,7 @@ header {
 .form-container > * {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  width: 300px;
   margin: 20px auto;
 }
 
@@ -64,11 +124,16 @@ button:active {
 
 .songs-overview {
   display: grid;
-  grid-template-columns: repeat(2, auto);
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // justify-content: space-around;
+  grid-template-columns: repeat(1, auto);
+
+  @include for-tablet {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  @include for-small-desktop {
+    grid-template-columns: repeat(3, auto);
+  }
+
 }
 
 .song-container {
@@ -105,6 +170,12 @@ img {
   object-fit: cover;
 }
 
-.delete-button {
+.about-section {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
 
+  h1 {
+  text-align: center;
+  }
 }
